--- a/misc/Brewfile
+++ b/misc/Brewfile
@@ -4,7 +4,6 @@ tap 'homebrew/cask-fonts'
 tap 'homebrew/cask-versions'
 tap 'homebrew/bundle'
 tap 'nicoverbruggen/homebrew-cask'
-tap 'stripe/stripe-cli'
 
 # Binaries
 brew 'bash' # Latest Bash version
@@ -16,7 +15,6 @@ brew 'git'
 brew 'grep'
 brew 'httpie'
 brew 'jq' # Used for spatie/visit
-brew 'mackup'
 brew 'mas' # Mac App Store manager
 brew 'pkg-config' # https://github.com/driesvints/dotfiles/issues/20
 brew 'svn' # Needed to install fonts
@@ -30,40 +28,19 @@ brew 'svgo'
 brew 'gifsicle'
 
 # Development
-brew 'php'
-brew 'php@8.1'
-brew 'composer'
-brew 'imagemagick'
-brew 'meilisearch'
-brew 'mysql'
-brew 'nginx'
-brew 'node'
-brew 'redis'
-brew 'yarn'
+brew 'herd'
 
 # Apps
 cask '1password'
+cask 'arc'
+cask 'cleanshot'
 cask 'dbngin'
 cask 'discord'
-cask 'docker'
+cask 'firefox'
 cask 'github'
-cask 'google-chrome'
-cask 'helo'
-cask 'insomnia'
-cask 'phpmon'
-cask 'ray'
+brew 'jetbrains-toolbox'
+brew 'rectangle'
 cask 'tableplus'
 cask 'the-unarchiver'
 cask 'tinkerwell'
-cask 'tunnelbear'
 cask 'visual-studio-code'
-cask 'zoom'
-
-# Fonts
-cask 'font-lato'
-cask 'font-open-sans'
-cask 'font-roboto'
-cask 'font-source-code-pro-for-powerline'
-cask 'font-source-code-pro'
-cask 'font-source-sans-pro'
-cask 'font-source-serif-pro'
